tests/errors/interpreter/zero_div.ny
uWu_nyaa() => yomu(3 / 0);